tests/resource/invalid/type/class/assign_to_inner_not_allowed.mamba
class X(x: Int)

x = X(10)

# now assign a float
x.x = 2.5
